[workspace]
resolver = "2"
members = ["paq1_authn_core", "paq1_authn_infra"]


[workspace.dependencies]
futures = "0.3.31"
rand = "0.9.0"
base64 = "0.22.1"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
async-trait = { version = "0.1.80" }
paq1-lib-error-handler = { git = "https://github.com/paq1/paq1-lib-error-handler.git", branch = "master", features = ["combine"], version = "0.2.0"}
# tokio = { version = "1.43.0", features = ["full"] }

#### actix
actix-web = { version = "4.10.2" }

#### security deps
argon2 = { version = "0.6.0-rc.2", features = ["getrandom"] }
password-hash = "0.6.0-rc.6"
# jsonwebtoken = "10.2.0"
# passwords = { version = "3.1.16", features = ["crypto", "common-password"]}

#### dbs
paq1_storage_core = { git = "https://github.com/paq1/paq1-lib-storage.git", branch = "master", version = "0.5.0"}
paq1_storage_infra = { git = "https://github.com/paq1/paq1-lib-storage.git", branch = "master", version = "0.5.0"}
