[package]
name = "paq1_authn_infra"
version = "0.1.0"
edition = "2024"

[dependencies]
paq1_authn_core = { path = "../paq1_authn_core"}
rand = { workspace = true }
base64 = {workspace = true}
password-hash = {workspace = true}
chrono = { workspace = true }
async-trait = { workspace = true }
paq1-lib-error-handler = { workspace = true }

#### sercurite
argon2 = { workspace = true }